[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Paul Voelker <mail@paulvoelker.de>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
