[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
bincode = "1.3.3"
local-ip-address = "*"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
