[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
bincode = "1.3.3"
async-trait = "0.1.56"
local-ip-address = "*"
log = "0.4"
env_logger = "0.9.0"