[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
local-ip-address = "*"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.9.0"
